force-app/main/default/objects/Referring_HCP_Staff__c/Referring_HCP_Staff__c.object-meta.xml
<CustomObject>

    <label>Referring HCP Staff</label>
    <nameField>
        <displayFormat>HCPS-{000000}</displayFormat>
        <label>Referring HCP Staff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referring HCP Staffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>