force-app/main/default/objects/Referring_HCP_Staff__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referring HCP Staffs</relationshipLabel>
    <relationshipName>Referring_HCP_Staffs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>