force-app/main/default/objects/Referring_HCP_Staff__c/fields/Delegate_Level__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Level__c</fullName>
    <label>Delegate Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>