force-app/main/default/objects/Referring_HCP_Staff__c/fields/HCP_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>HCP_Enrollment__c</fullName>
    <label>HCP Enrollment</label>
    <referenceTo>HCP_Enrollment__c</referenceTo>
    <relationshipLabel>Referring HCP Staffs</relationshipLabel>
    <relationshipName>Referring_HCP_Staffs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>